Vaccine changes: Added possible translated keys.